--- a/src/ui/NumericCombo/NumericCombo.module.scss
+++ b/src/ui/NumericCombo/NumericCombo.module.scss
@@ -1,8 +1,8 @@
-@import '../../config/variables';
+@import '../../index.scss';
 
 .combo-style {
   width: 50px;
-  border: 1px solid $color-lightblue;
+  border: 1px solid var(--color-blue-400);
   border-radius: 4px;
   padding: 4px;
   outline: none;
