--- a/src/Layout/RootLayout/Header/RootHeader.module.scss
+++ b/src/Layout/RootLayout/Header/RootHeader.module.scss
@@ -1,9 +1,7 @@
-@import '../../../config/variables';
-
 .header,
 .header__relative {
   background-color: white;
-  border-bottom: 1px solid rgba($color: $color-blue, $alpha: 0.5);
+  border-bottom: 1px solid rgba($color: rgb(66, 66, 255), $alpha: 0.5);
   position: relative;
   // display: flex;
   top: 0;
@@ -25,7 +23,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  height: $header-height;
+  height: var(--header-height);
 }
 
 .header__left {
@@ -46,5 +44,5 @@
 }
 
 .logo {
-  height: $header-height;
+  height: var(--header-height);
 }
