--- a/src/components/Admin/AdminMenu/AdminMenu.module.scss
+++ b/src/components/Admin/AdminMenu/AdminMenu.module.scss
@@ -1,12 +1,10 @@
-@import '../../../config/variables';
-
 .container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 12rem;
   height: 100%;
-  background-color: $color-black;
+  background-color: var(--color-stone-900);
 }
 
 .nav_section {
@@ -26,7 +24,7 @@
   display: flex;
   align-items: center;
   padding: 1rem 1rem;
-  box-shadow: 1px 2px 4px rgba($color: $color-lightgray, $alpha: 0.1);
+  box-shadow: 1px 2px 4px rgba(black, 0.1);
 
   img {
     width: 2rem;
@@ -34,7 +32,7 @@
   }
 
   span {
-    color: $color-lightgray;
+    color: var(--color-gray-100);
     font-size: large;
     font-family: var(--font-lilitaOne);
   }
