--- a/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
+++ b/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
@@ -1,8 +1,7 @@
-@import '../../../config/variables';
-
 $header-color: rgb(2, 127, 168);
 $back-color: rgb(240, 248, 253);
 $label-color: rgb(197, 229, 248);
+$color-rose: var(--color-rose-500);
 
 .list_item {
   display: grid;
@@ -11,7 +10,7 @@ $label-color: rgb(197, 229, 248);
   grid-template-columns: repeat(1, 1fr);
   background-color: $back-color;
   border-radius: 4px;
-  box-shadow: 1px 2px 4px rgba($color: #000000, $alpha: 0.1);
+  box-shadow: 1px 2px 4px rgba(black, 0.1);
   overflow: hidden;
 }
 
@@ -20,8 +19,8 @@ $label-color: rgb(197, 229, 248);
   background-color: $header-color;
 
   .web_mark {
-    border: 3px solid $color-lightgreen;
-    color: $color-lightgreen;
+    border: 3px solid var(--color-lime-500);
+    color: var(--color-lime-500);
     padding: 0 4px;
     margin-left: 4px;
     border-radius: 4px;
@@ -45,7 +44,7 @@ $label-color: rgb(197, 229, 248);
   .label {
     display: flex;
     align-items: center;
-    font-size: $font-size-level2;
+    font-size: var(--fs-xs);
     padding-left: 10px;
     background-color: $label-color;
   }
@@ -55,13 +54,13 @@ $label-color: rgb(197, 229, 248);
     display: flex;
     align-items: center;
     font-weight: bold;
-    color: $color-darkblue2;
+    color: var(--color-blue-800);
     padding-left: 10px;
   }
 
   .complete_text {
-    color: $color-lightred;
-    background-color: rgba($color: $color-lightred, $alpha: 0.3);
+    color: $color-rose;
+    background-color: rgba(black, 0.1);
   }
 
   &.grid_header {
@@ -88,8 +87,7 @@ $min-widths: (
   1450px: 7,
 );
 
-@each $width,
-$columnCount in $min-widths {
+@each $width, $columnCount in $min-widths {
   @media (min-width: $width) {
     .list_item {
       grid-template-columns: repeat($columnCount, 1fr);
