--- a/src/components/Admin/AdminOrderItem/Components/DeliverySelect/DeliverySelect.module.scss
+++ b/src/components/Admin/AdminOrderItem/Components/DeliverySelect/DeliverySelect.module.scss
@@ -1,16 +1,14 @@
-@import '../../../../../config/variables';
-
 .inner_select {
   width: 100%;
   height: 100%;
   font: inherit;
-  color: $color-darkorange;
+  color: var(--color-orange-600);
   background-color: transparent;
   border: none;
   outline-style: none;
   padding-left: 6px;
   font-weight: bold;
   &:hover {
-    background-color: rgba($color: #000000, $alpha: 0.1);
+    background-color: rgba(black, 0.1);
   }
 }
