--- a/src/components/Admin/AdminSearchForm/AdminSearchForm.module.scss
+++ b/src/components/Admin/AdminSearchForm/AdminSearchForm.module.scss
@@ -1,5 +1,3 @@
-@import '../../../config/variables';
-
 .search_wrapper {
   display: flex;
   align-items: center;
@@ -7,7 +5,7 @@
   flex-wrap: wrap;
   margin: 10px;
   border-radius: 4px;
-  box-shadow: 1px 2px 4px rgba($color: $color-blue, $alpha: 0.3);
+  box-shadow: 1px 2px 4px rgba(black, 0.1);
   padding: 5px 10px;
   background-color: white;
 
