--- a/src/components/CartButton/CartButton.module.scss
+++ b/src/components/CartButton/CartButton.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .items-count {
   position: absolute;
   top: 4px;
@@ -7,7 +5,7 @@
   min-width: 25px;
   padding: 2px 5px;
   border-radius: 50px;
-  background-color: rgba($color: $color-pink, $alpha: 0.9);
+  background-color: rgba(rgb(245, 55, 96), 0.9);
   color: white;
   &:hover {
     color: white;
