--- a/src/components/EmptyCartView/EmptyCartView.module.scss
+++ b/src/components/EmptyCartView/EmptyCartView.module.scss
@@ -1,10 +1,8 @@
-@import '../../config/variables';
-
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - #{$header-height});
+  height: calc(100vh - var(--header-height));
 }
 
 .img_container {
@@ -28,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba($color: $color-red, $alpha: 0.9);
+  background-color: rgba(rgb(228, 42, 42), 0.9);
   padding: 10px;
   border-radius: 10px;
 }
