--- a/src/components/MenuLink/MenuLink.module.scss
+++ b/src/components/MenuLink/MenuLink.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .ul {
   position: relative;
   list-style: none;
@@ -18,16 +16,16 @@
   padding: 10px;
   width: 100%;
   text-decoration: none;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
   border-radius: 4px;
   border: none;
   background-color: transparent;
   text-align: left;
-  font-size: $font-size-level3;
+  font-size: var(--fs-base);
 
   &:hover,
   &:active {
-    background-color: $color-lightskyblue;
+    background-color: var(--color-blue-200);
   }
 }
 
@@ -36,7 +34,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 0;
-    background-color: $color-lightblue;
+    background-color: var(--color-blue-400);
   }
 
   .li > button {
