--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -1,4 +1,6 @@
-@import '../../config/variables';
+@import '../../index.scss';
+
+$color-blue: var(--color-blue-500);
 
 .orders-container {
   height: 100%;
@@ -20,10 +22,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px;
-  box-shadow: 1px 2px 4px rgba($color: $color-blue, $alpha: 0.3);
+  box-shadow: 1px 2px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.3);
   font-weight: bold;
-  background-color: $color-lightorange;
-  color: $color-darkbrown;
+  background-color: var(--color-amber-400);
+  color: var(--color-amber-900);
 }
 
 .order-body-wrapper {
@@ -40,8 +42,8 @@
 
 .send-type-base {
   font-weight: normal;
-  font-size: $font-size-level2;
-  color: $color-gray;
+  font-size: var(--fs-xs);
+  color: var(--color-gray-500);
   border-radius: 4px;
   border: 1px solid white;
   padding: 4px;
@@ -50,23 +52,23 @@
 
 .send-type-ing {
   color: white;
-  background-color: $color-lightblue;
+  background-color: var(--color-blue-400);
 }
 
 .send-type-end {
   color: white;
-  background-color: $color-green;
+  background-color: var(--color-green-600);
 }
 
 .send-type-cancel {
   color: white;
   border: 1px solid white;
-  background-color: $color-lightred;
+  background-color: var(--color-rose-500);
 }
 
 .footer {
   padding: 20px 40px;
-  box-shadow: 0px -1px 3px rgba($color: $color-blue, $alpha: 0.3);
+  box-shadow: 0px -1px 3px rgba($color: rgb(92, 92, 255), $alpha: 0.3);
 }
 
 .label-text {
@@ -87,15 +89,15 @@
 }
 
 .cancel-button {
-  @include custom-button($backgroundColor: $color-lightred, $activeBackgroundColor: red);
+  @include custom-button($backgroundColor: var(--color-rose-500), $activeBackgroundColor: red);
 }
 
 .reorder-button {
   @include custom-button(
     $backgroundColor: white,
     $activeBackgroundColor: Azure,
-    $color: $color-darkgreen,
-    $borderColor: $color-green
+    $color: var(--color-green-800),
+    $borderColor: var(--color-green-600)
   );
 }
 
@@ -104,12 +106,12 @@
   flex-direction: column;
   margin-top: 10px;
   padding: 15px;
-  background-color: $color-red;
-  box-shadow: 0px 0px 4px rgba($color: $color-blue, $alpha: 0.8);
+  background-color: var(--color-red-500);
+  box-shadow: 0px 0px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.8);
 }
 
 .virtual_info__title {
   text-align: center;
   font-weight: bold;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
 }
