--- a/src/components/PaymentSuccessComplete/PaymentSuccessComplete.module.scss
+++ b/src/components/PaymentSuccessComplete/PaymentSuccessComplete.module.scss
@@ -1,23 +1,23 @@
-@import '../../config/variables';
+@import '../../index.scss';
 
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  box-shadow: 1px 0px 8px rgba($color: $color-blue, $alpha: 0.2);
+  box-shadow: 1px 0px 8px rgba($color: rgb(92, 92, 255), $alpha: 0.2);
   padding: 4rem 0.5rem;
 }
 
 .title {
-  font-size: $font-size-level8;
+  font-size: var(--fs-3xl);
   font-weight: bold;
   padding-bottom: 20px;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
 }
 
 .order_id {
-  font-size: $font-size-level4;
+  font-size: --fs-xl;
   padding: 20px;
 }
 
@@ -34,9 +34,9 @@
 
 .virtual_info__title {
   text-align: center;
-  font-size: $font-size-level4;
+  font-size: --fs-xl;
   font-weight: bold;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
 }
 
 .detail_section {
@@ -46,21 +46,21 @@
 .separator {
   width: 1px;
   margin: 0 20px;
-  background-color: rgba($color: $color-blue, $alpha: 0.4);
+  background-color: rgba($color: rgb(92, 92, 255), $alpha: 0.4);
   height: 100%;
 }
 .label_text {
   display: flex;
-  font-size: $font-size-level3;
+  font-size: var(--fs-base);
   padding: 5px 0;
   .label {
     width: 70px;
-    color: $color-gray;
+    color: var(--color-gray-500);
   }
   .text {
     font-weight: bold;
     &.highlight_text {
-      color: $color-lightred;
+      color: var(--color-rose-500);
     }
   }
 }
@@ -80,17 +80,25 @@
     text-decoration: none;
     padding: 20px;
     font-weight: bold;
-    font-size: $font-size-level3;
+    font-size: var(--fs-base);
   }
 }
 
 .nav_orders {
-  @include custom-button($color: $color-black, $backgroundColor: white, $activeBackgroundColor: $color-lightgray);
+  @include custom-button(
+    $color: var(--color-stone-900),
+    $backgroundColor: white,
+    $activeBackgroundColor: var(--color-gray-100)
+  );
   margin-right: 5px;
-  border: 1px solid $color-lightskyblue;
+  border: 1px solid var(--color-blue-200);
 }
 
 .nav_main {
-  @include custom-button($color: white, $backgroundColor: $color-lightred, $activeBackgroundColor: $color-red);
+  @include custom-button(
+    $color: white,
+    $backgroundColor: var(--color-rose-500),
+    $activeBackgroundColor: var(--color-red-500)
+  );
   margin-left: 5px;
 }
