--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .item {
   display: flex;
   flex-direction: column;
@@ -7,7 +5,7 @@
   list-style: none;
   min-width: 10rem;
   border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba($color: $color-darkblue3, $alpha: 0.5);
+  box-shadow: 0px 2px 4px rgba(black, 0.1);
   padding: 14px 10px;
   background-color: white;
   margin: 10px;
@@ -20,16 +18,16 @@
 }
 
 .item__name {
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
   margin-bottom: 10px;
 }
 
 .item__unit {
-  font-size: $font-size-level2;
-  color: $color-gray;
+  font-size: var(--fs-xs);
+  color: var(--color-gray-500);
 }
 
 .cost {
-  color: $color-lightred;
+  color: var(--color-rose-500);
   font-weight: bold;
 }
