--- a/src/components/ProductModal/ProductModal.module.scss
+++ b/src/components/ProductModal/ProductModal.module.scss
@@ -1,4 +1,4 @@
-@import '../../config/variables';
+@import '../../index.scss';
 
 .container {
   display: flex;
@@ -28,7 +28,7 @@
 }
 
 .add-and-to-cart-button {
-  @include custom-button($color: white, $backgroundColor: $color-green, $activeBackgroundColor: $color-darkgreen);
+  @include custom-button($color: white, $backgroundColor: var(--color-green-600), $activeBackgroundColor: var(--color-green-800));
 }
 
 .to-cart-button {
@@ -57,8 +57,8 @@
 
 .service_info {
   text-align: center;
-  font-size: $font-size-level2;
-  color: $color-darkblue2;
+  font-size: var(--fs-xs);
+  color: var(--color-blue-800);
   text-decoration: underline;
 
   &:hover {
