--- a/src/components/ProductQuantitySelect/ProductQuantitySelect.module.scss
+++ b/src/components/ProductQuantitySelect/ProductQuantitySelect.module.scss
@@ -1,8 +1,6 @@
-@import '../../config/variables';
-
 .select {
   background-color: transparent;
-  border: 1px solid $color-blue;
+  border: 1px solid var(--color-blue-500);
   border-radius: 4px;
   outline: none;
 
