--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,10 +1,8 @@
-@import '../../config/variables';
-
 .container {
   border-radius: 4px;
   margin: 10px;
   overflow: hidden;
-  box-shadow: 0px 0px 4px rgba($color: $color-blue, $alpha: 0.6);
+  box-shadow: 0px 0px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.6);
 }
 
 .products-grid ul {
