--- a/src/components/ServiceInfo/ServiceInfo.module.scss
+++ b/src/components/ServiceInfo/ServiceInfo.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -13,15 +11,15 @@
   .title {
     font-weight: bold;
     padding: 15px 0;
-    font-size: $font-size-level3;
+    font-size: var(--fs-base);
     text-align: center;
-    color: $color-darkblue2;
-    border-bottom: 1px solid $color-blue;
+    color: var(--color-blue-800);
+    border-bottom: 1px solid var(--color-blue-500);
   }
 
   .detail {
     padding: 20px 10px;
-    font-size: $font-size-level2;
+    font-size: var(--fs-xs);
   }
 
   .sub_text {
@@ -35,12 +33,12 @@
 
     .title {
       padding: 15px;
-      font-size: $font-size-level4;
+      font-size: --fs-xl;
     }
 
     .detail {
       padding: 20px 40px;
-      font-size: $font-size-level3;
+      font-size: var(--fs-base);
     }
   }
 }
