--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -1,4 +1,3 @@
-@import '../../config/variables';
 $icon-size: 24px;
 $toastBackgroundOpacity: 0.9;
 
@@ -35,7 +34,7 @@ $toastBackgroundOpacity: 0.9;
 .message {
   flex: 1;
   color: white;
-  font-size: $font-size-level4;
+  font-size: --fs-xl;
   padding-bottom: 2px;
 }
 
@@ -64,19 +63,19 @@ $toastBackgroundOpacity: 0.9;
 }
 
 .info {
-  background-color: rgba($color: $color-blue, $alpha: $toastBackgroundOpacity);
+  background-color: rgba($color: rgb(92, 92, 255), $alpha: $toastBackgroundOpacity);
 }
 
 .info::before {
-  background-color: $color-darkblue2;
+  background-color: var(--color-blue-800);
 }
 
 .ok {
-  background-color: rgba($color: $color-green, $alpha: $toastBackgroundOpacity);
+  background-color: rgba($color: rgb(33, 126, 33), $alpha: $toastBackgroundOpacity);
 }
 
 .ok::before {
-  background-color: $color-darkgreen;
+  background-color:  rgb(13, 68, 13);
 }
 
 .warning {
@@ -84,15 +83,15 @@ $toastBackgroundOpacity: 0.9;
 }
 
 .warning::before {
-  background-color: $color-darkbrown;
+  background-color:  rgb(185, 90, 0);
 }
 
 .error {
-  background-color: rgba($color: $color-red, $alpha: $toastBackgroundOpacity);
+  background-color: rgba($color: var(--color-red-500), $alpha: $toastBackgroundOpacity);
 }
 
 .error::before {
-  background-color: $color-darkred;
+  background-color: rgb(133, 6, 6);
 }
 
 @keyframes progress {
