--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-:root {
-  --font-robotoMedium: 'Roboto-Medium';
-  --font-notoSansKRRegular: 'NotoSansKR-Regular';
-  --font-lilitaOne: 'Lilita One';
-  --color-red: red;
+:root {  
+  --radius-primary: 4px;
+  --backcolor-primary: rgb(233, 237, 249);
+  --cart-view-height: 5rem;
+  --header-height: 48px;
 }
 
 * {
@@ -10,20 +10,6 @@
   font-family: var(--font-notoSansKRRegular);
 }
 
-@font-face {
-  font-family: 'Roboto-Medium';
-  src: url(./assets/fonts/Roboto-Medium.ttf);
-}
-
-@font-face {
-  font-family: 'NotoSansKR-Regular';
-  src: url(./assets/fonts/NotoSansKR-Regular.ttf);
-}
-
-@font-face {
-  font-family: 'Lilita One';
-  src: url(./assets/fonts/LilitaOne-Regular.ttf);
-}
 html {
   height: 100%;
 }
@@ -31,12 +17,22 @@ html {
 #root {
   height: 100%;
 }
+
 body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
+}
+
+select {
+  font: inherit;
+}
+
+input {
+  font: inherit;
+  outline: none;
 }
