--- a/src/pages/ErrorPage/ErrorPage.module.scss
+++ b/src/pages/ErrorPage/ErrorPage.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .main {
   height: 100vh;
   display: flex;
@@ -7,6 +5,6 @@
   align-items: center;
 
   div {
-    font-size: $font-size-level7;
+    font-size: var(--fs-3xl);
   }
 }
