--- a/src/pages/PaymentPage/PaymentPage.module.scss
+++ b/src/pages/PaymentPage/PaymentPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../config/variables';
+@import '../../index.scss';
 
 .payment {
   margin: 10px;
@@ -23,7 +23,7 @@
 }
 
 .checkout-amount {
-  font-size: $font-size-level4;
+  font-size: --fs-xl;
   font-weight: bold;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
 }
