--- a/src/pages/PaymentProcessingPage/PaymentProcessingPage.module.scss
+++ b/src/pages/PaymentProcessingPage/PaymentProcessingPage.module.scss
@@ -1,9 +1,7 @@
-@import '../../config/variables';
-
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - #{$header-height});
+  height: calc(100vh - var(--header-height));
 }
