--- a/src/pages/SignupPage/SignupPage.module.scss
+++ b/src/pages/SignupPage/SignupPage.module.scss
@@ -1,4 +1,5 @@
-@import '../../config/variables';
+@import '../../index.scss';
+
 $margin-bottom: 8px;
 
 .container {
@@ -10,7 +11,7 @@ $margin-bottom: 8px;
 
   h2 {
     margin: 0;
-    color: $color-blue;
+    color: var(--color-blue-500);
   }
 }
 
@@ -34,7 +35,7 @@ $margin-bottom: 8px;
   height: 1.5rem;
   width: 1.5rem;
   text-decoration: none;
-  color: $color-darkblue3;
+  color: var(--color-blue-900);
 }
 
 .input_style {
