--- a/src/ui/Card/Card.module.scss
+++ b/src/ui/Card/Card.module.scss
@@ -1,7 +1,5 @@
-@import '../../config/variables';
-
 .card {
-  border-radius: $radius-primary;
+  border-radius: var(--rounded);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
