--- a/src/ui/DownModal/DownModal.module.scss
+++ b/src/ui/DownModal/DownModal.module.scss
@@ -1,11 +1,9 @@
-@import '../../config/variables';
-
 .slider {
   position: fixed;
-  top: $header-height;
+  top: var(--header-height);
   right: 0;
   min-width: 22rem;
-  background-color: rgba($color: blue, $alpha: 0.5);
+  background-color: rgba($color: rgb(69, 69, 255), $alpha: 0.5);
   // overflow: hidden;
   // height: 40rem;
   animation: down 0.5s ease-in forwards;
