--- a/src/ui/TextInput/TextInput.module.scss
+++ b/src/ui/TextInput/TextInput.module.scss
@@ -1,5 +1,3 @@
-@import '../../config/variables';
-
 .textbox {
   display: flex;
   flex-direction: row-reverse;
@@ -13,20 +11,20 @@
   margin: 0;
   border: none;
   outline: none;
-  background-color: $color-lightgray;
-  border: 1px solid $color-lightblue;
+  background-color: var(--color-gray-100);
+  border: 1px solid var(--color-blue-400);
   border-left: none;
 }
 
 .input:focus {
-  border: 1px solid $color-blue;
+  border: 1px solid var(--color-blue-500);
   border-left: none;
 }
 
 .indicator {
   width: 4px;
   height: 100%;
-  background-color: $color-blue;
+  background-color: var(--color-blue-500);
 }
 
 .input:focus ~ .indicator {
