--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -26,8 +26,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem 0 1rem 0;
-
+  padding: 3rem 2rem 1rem 2rem;
+  min-width: 20rem;
   h2 {
     margin: 0;
     color: var(--color-blue-500);
@@ -39,7 +39,6 @@
   display: flex;
   justify-content: center;
   align-items: start;
-  width: 20rem;
 }
 
 .ykiho_form {
@@ -55,6 +54,10 @@
   margin-top: 10px;
   height: 36px;
   @include blue-button;
+}
+
+.text_input {
+  width: 100%;
 }
 
 .password {
