--- a/src/pages/SignupPage/SignupPage.module.scss
+++ b/src/pages/SignupPage/SignupPage.module.scss
@@ -8,7 +8,7 @@ $margin-bottom: 8px;
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 0 2rem 2rem 2rem;
-
+  min-width: 20rem;
   h2 {
     margin: 0;
     color: var(--color-blue-500);
