--- a/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
+++ b/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
@@ -31,8 +31,8 @@ $color-rose: var(--color-rose-500);
 .header_group {
   display: flex;
   justify-content: space-between;
-  margin: var(--m-2) 0;
-  padding: 0 var(--m-2);
+  margin: var(--sz-2) 0;
+  padding: 0 var(--sz-2);
 }
 
 .data_box {
