--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -21,7 +21,7 @@ $color-blue: var(--color-blue-500);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--m-2) var(--m-2);
+  padding: var(--sz-2) var(--sz-2);
   box-shadow: 1px 2px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.3);
   font-weight: bold;
   background-color: var(--color-amber-400);
