--- a/src/components/RefundModal/RefundModal.module.scss
+++ b/src/components/RefundModal/RefundModal.module.scss
@@ -25,9 +25,9 @@
   min-width: 10rem;
   max-width: 12rem;
   border: 1px solid var(--color-pink-900);
-  border-radius: var(--rounded);  
+  border-radius: var(--rounded);
 
-  &:focus{
+  &:focus {
     background-color: var(--color-pink-100);
   }
 }
@@ -43,6 +43,17 @@
     padding: 10px 30px;
     margin: var(--sz-1) 1rem;
   }
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--color-rose-300);
+  background-color: var(--color-rose-100);
+  padding: 0.25rem;
+  margin: 0.5rem 0;
+  border-radius: 4px;
 }
 
 .refund_button {
