--- a/src/components/Main/ProductItem/ProductItem.module.scss
+++ b/src/components/Main/ProductItem/ProductItem.module.scss
@@ -7,7 +7,7 @@
   border-radius: 4px;
   box-shadow: 0px 2px 4px rgba(black, 0.1);
   padding: 14px 10px;
-  background-color: white;
+  background-color: var(--color-white);
   margin: 10px;
   min-width: 12rem;
   transition: transform 0.1s;
