--- a/src/components/Main/ProductList/ProductList.module.scss
+++ b/src/components/Main/ProductList/ProductList.module.scss
@@ -5,6 +5,13 @@
   box-shadow: 0px 0px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.6);
 }
 
+.dark.container {
+  box-shadow: 0px 0px 4px rgba($color: rgb(255, 255, 255), $alpha: 0.6);
+}
+
+.dark{
+  color: red;
+}
 .products-grid ul {
   margin: 0;
   padding: 10px 20px;
