--- a/src/ui/Card/Card.module.scss
+++ b/src/ui/Card/Card.module.scss
@@ -2,4 +2,5 @@
   border-radius: var(--rounded);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  background-color: var(--color-white);
 }
