--- a/src/components/OrderBox/OrderBoxFooter/OrderBoxFooter.module.scss
+++ b/src/components/OrderBox/OrderBoxFooter/OrderBoxFooter.module.scss
@@ -40,8 +40,8 @@
   flex-direction: column;
   margin-top: 10px;
   padding: 15px;
-  background-color: var(--color-red-500);
-  box-shadow: 0px 0px 4px rgba($color: rgb(92, 92, 255), $alpha: 0.8);
+  background-color: var(--color-rose-100);
+  box-shadow: 1px 2px 4px rgba(black, $alpha: 0.2);
 }
 
 .virtual_info__title {
