test 환경 dark 모드 적용

--- a/src/Layout/BaseLayout/BaseLayout.module.scss
+++ b/src/Layout/BaseLayout/BaseLayout.module.scss
@@ -18,16 +18,17 @@
       z-index: 1;
       width: 100%;
     }
-
-    main {
-      padding-top: var(--header-height, 0);
-      flex-grow: 1;
-    }
   }
 
   // footer {
   //   height: 60px;
   // }
+}
+
+.main {
+  background-color: var(--theme-bg-primary);
+  padding-top: var(--header-height, 0);
+  flex-grow: 1;
 }
 
 @media (min-width: 768px) {
