--- a/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
+++ b/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
@@ -1,7 +1,7 @@
 $header-color: rgb(2, 127, 168);
 $back-color: rgb(240, 248, 253);
 $label-color: rgb(197, 229, 248);
-$color-rose: var(--color-rose-500);
+$color-rose: var(--theme-text-rose-500);
 
 .list_item {
   display: grid;
