--- a/src/components/BuyArea/BuyArea.module.scss
+++ b/src/components/BuyArea/BuyArea.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   padding: 15px;
   height: var(--cart-view-height);
-  background-color: var(--color-blue-500);
+  background-color: var(--theme-bg-buy-area);
   z-index: 1;
   color: #fff;
 }
