--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -30,7 +30,7 @@
   min-width: 20rem;
   h2 {
     margin: 0;
-    color: var(--color-blue-500);
+    color: var(--theme-blue-600);
     margin-bottom: 20px;
   }
 }
@@ -69,5 +69,5 @@
   margin-top: 10px;
   text-align: center;
   text-decoration: none;
-  color: var(--color-blue-500);
+  color: var(--theme-blue-600);
 }
