--- a/src/components/MenuLink/MenuLink.module.scss
+++ b/src/components/MenuLink/MenuLink.module.scss
@@ -16,7 +16,7 @@
   padding: 10px;
   width: 100%;
   text-decoration: none;
-  color: var(--color-blue-900);
+  color: var(--theme-text-blue-900);
   border-radius: 4px;
   border: none;
   background-color: transparent;
@@ -25,7 +25,7 @@
 
   &:hover,
   &:active {
-    background-color: var(--color-blue-200);
+    background-color: var(--theme-bg-blue-200);
   }
 }
 
@@ -34,7 +34,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 0;
-    background-color: var(--color-blue-400);
+    background-color: var(--theme-blue-400);
   }
 
   .li > button {
