--- a/src/components/ProductQuantitySelect/ProductQuantitySelect.module.scss
+++ b/src/components/ProductQuantitySelect/ProductQuantitySelect.module.scss
@@ -1,6 +1,7 @@
 .select {
+  color: var(--theme-text-black);  
   background-color: transparent;
-  border: 1px solid var(--color-blue-500);
+  border: 1px solid var(--theme-blue-600);
   border-radius: 4px;
   outline: none;
 
