--- a/src/components/ServiceInfo/ServiceInfo.module.scss
+++ b/src/components/ServiceInfo/ServiceInfo.module.scss
@@ -14,7 +14,7 @@
     font-size: var(--fs-base);
     text-align: center;
     color: var(--color-blue-800);
-    border-bottom: 1px solid var(--color-blue-500);
+    border-bottom: 1px solid var(--theme-blue-600);
   }
 
   .detail {
