--- a/src/components/TrackingItem/TrackingItem.module.scss
+++ b/src/components/TrackingItem/TrackingItem.module.scss
@@ -22,7 +22,7 @@
 
   &.highlight {
     .icon {
-      background-color: var(--color-blue-500);
+      background-color: var(--theme-blue-600);
     }
 
     .description_wrapper{
