--- a/src/components/TrackingModal/TrackingModal.module.scss
+++ b/src/components/TrackingModal/TrackingModal.module.scss
@@ -75,7 +75,7 @@
   
   .errorMessage{
     text-align: center;
-    color: var(--color-rose-500);
+    color: var(--theme-text-rose-500);
   }
 
   padding: 20px;
