--- a/src/pages/ErrorPage/BaseErrorPage/BaseErrorPage.module.scss
+++ b/src/pages/ErrorPage/BaseErrorPage/BaseErrorPage.module.scss
@@ -20,7 +20,7 @@
 }
 
 .box {
-  border: 1px solid var(--color-blue-400);
+  border: 1px solid var(--theme-blue-400);
   border-radius: 8px;
   box-shadow: 1px 2px 4px rgba($color: rgb(53, 53, 255), $alpha: 0.3);
   background-color: white;
