--- a/src/ui/CheckBox/CheckBox.module.scss
+++ b/src/ui/CheckBox/CheckBox.module.scss
@@ -1,7 +1,7 @@
 .checkbox {
   display: flex;
   align-items: center;
-
+  color: var(--theme-text-black);
   label {
     display: flex;
     width: 100%;
