--- a/src/ui/NumericCombo/NumericCombo.module.scss
+++ b/src/ui/NumericCombo/NumericCombo.module.scss
@@ -2,7 +2,7 @@
 
 .combo-style {
   width: 50px;
-  border: 1px solid var(--color-blue-400);
+  border: 1px solid var(--theme-blue-400);
   border-radius: 4px;
   padding: 4px;
   outline: none;
