--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
 body {
-  background-color: var(--backcolor-primary);
+  background-color: var(--theme-bg-primary);
 }
 
 .header-text {
   text-align: center;
-  color: var(--color-blue-500);
+  color: var(--theme-blue-600);
   padding: 10px;
   margin: 0 20px;
-  border-bottom: 1px solid var(--color-blue-400);
+  border-bottom: 1px solid var(--theme-blue-400);
 }
