--- a/src/Layout/AdminLayout/Header/AdminHeader.module.scss
+++ b/src/Layout/AdminLayout/Header/AdminHeader.module.scss
@@ -1,11 +1,12 @@
 .container {
-  background-color: white;
+  color: var(--color-white);
+  background-color: var(--theme-bg-white);
   width: 100%;
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 1px 2px 4px rgba($color: #000000, $alpha: 0.1);
+  box-shadow: 1px 2px 4px rgba(var(--theme-rgb-black), 0.1);
   .center {
     position: absolute;
     left: 50%;
