--- a/src/Layout/PaymentLayout/Header/PaymentHeader.module.scss
+++ b/src/Layout/PaymentLayout/Header/PaymentHeader.module.scss
@@ -2,8 +2,9 @@
   position: relative;
   height: var(--header-height);
   align-items: center;
-  background-color: var(--color-gray-100);
-  box-shadow: 0px 2px 4px rgba($color: black, $alpha: 0.1);
+  color: var(--theme-text-black);
+  background-color: var(--theme-bg-white);
+  box-shadow: 0px 2px 4px rgba($color: gray, $alpha: 0.1);
 }
 
 .header__left {
