--- a/src/Layout/RootLayout/Header/RootHeader.module.scss
+++ b/src/Layout/RootLayout/Header/RootHeader.module.scss
@@ -1,7 +1,7 @@
 .header,
 .header__relative {
-  background-color: white;
-  border-bottom: 1px solid rgba($color: rgb(66, 66, 255), $alpha: 0.5);
+  background-color: var(--theme-bg-white);
+  border-bottom: 1px solid gray;
   position: relative;
   // display: flex;
   top: 0;
