--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -10,7 +10,7 @@
 
   .header {
     height: 100px;
-    background-color: var(--color-blue-600);
+    background-color: var(--theme-bg-blue-600);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +18,7 @@
   }
   .list {
     height: 100%;
-    background-color: white;
+    background-color: var(--theme-bg-white);
     display: flex;
     flex-direction: column;
     align-items: center;
