--- a/src/components/Main/ProductItem/ProductItem.module.scss
+++ b/src/components/Main/ProductItem/ProductItem.module.scss
@@ -7,7 +7,7 @@
   border-radius: 4px;
   box-shadow: 0px 2px 4px rgba(black, 0.1);
   padding: 14px 10px;
-  background-color: var(--color-white);
+  background-color: var(--theme-bg-card);
   margin: 10px;
   min-width: 12rem;
   transition: transform 0.1s;
@@ -18,7 +18,7 @@
 }
 
 .item__name {
-  color: var(--color-blue-900);
+  color: var(--theme-text-blue-900);
   margin-bottom: 10px;
 }
 
@@ -28,6 +28,6 @@
 }
 
 .cost {
-  color: var(--color-rose-500);
+  color: var(--theme-text-rose-500);
   font-weight: bold;
 }
