--- a/src/components/OrderBox/OrderBoxFooter/OrderBoxFooter.module.scss
+++ b/src/components/OrderBox/OrderBoxFooter/OrderBoxFooter.module.scss
@@ -2,6 +2,7 @@
 
 .footer {
   padding: 20px 40px;
+  color: var(--theme-text-black);
   box-shadow: 0px -1px 3px rgba($color: rgb(92, 92, 255), $alpha: 0.3);
 }
 
@@ -40,12 +41,12 @@
   flex-direction: column;
   margin-top: 10px;
   padding: 15px;
-  background-color: var(--color-rose-100);
+  background-color: var(--theme-bg-virtual-card);
   box-shadow: 1px 2px 4px rgba(black, $alpha: 0.2);
 }
 
 .virtual_info__title {
   text-align: center;
   font-weight: bold;
-  color: var(--color-blue-900);
+  color: var(--theme-text-blue-900);
 }
