--- a/src/components/ProductModal/components/NumericUpDown/NumericUpDown.module.scss
+++ b/src/components/ProductModal/components/NumericUpDown/NumericUpDown.module.scss
@@ -5,11 +5,11 @@
   width: 30px;
   text-align: center;
   outline: none;
-  border: 1px solid var(--color-blue-500);
+  border: 1px solid var(--theme-blue-600);
   border-radius: 4px;
   &:hover,
   &:focus {
-    border: 2px solid var(--color-blue-500);
+    border: 2px solid var(--theme-blue-600);
   }
 }
 
