--- a/src/components/RefundModal/RefundModal.module.scss
+++ b/src/components/RefundModal/RefundModal.module.scss
@@ -21,18 +21,18 @@
   font-size: var(--fs-base);
 }
 
-.data {
+.input {
   min-width: 10rem;
   max-width: 12rem;
-  border: 1px solid var(--color-pink-900);
-  border-radius: var(--rounded);
-
-  &:focus {
-    background-color: var(--color-pink-100);
-  }
+  border: 1px solid var(--theme-text-rose-500);
+  color: var(--theme-text-black);
+  background-color: var(--theme-bg-input);
+  border-radius: 0.25rem;
+ 
 }
 
 .label {
+  color: var(--theme-text-black);
   width: 65px;
 }
 
@@ -41,7 +41,7 @@
   justify-content: center;
   button {
     padding: 10px 30px;
-    margin: var(--sz-1) 1rem;
+    margin: var(--sz-1) 0.5rem;
   }
 }
 
@@ -57,9 +57,9 @@
 }
 
 .refund_button {
-  @include custom-button($backgroundColor: var(--color-rose-500), $activeBackgroundColor: var(--color-red-500));
+  @include red-button;
 }
 
 .cancel_button {
-  @include custom-button($color: black, $backgroundColor: transparent, $activeBackgroundColor: var(--color-gray-100));
+  @include custom-button($color: black, $backgroundColor: white, $activeBackgroundColor: var(--color-gray-400));
 }
