--- a/src/components/UserModal/UserModal.module.scss
+++ b/src/components/UserModal/UserModal.module.scss
@@ -9,7 +9,7 @@
   }
 
   .header {
-    background-color: var(--color-blue-600);
+    background-color: var(--theme-bg-blue-600);
     display: flex;
     justify-content: space-between;
     color: whitesmoke;
@@ -54,29 +54,29 @@
     padding: 10px;
     margin-bottom: 10px;
     text-decoration: none;
-    color: var(--color-blue-900);
+    color: var(--theme-text-blue-900);
 
     .icon {
       width: 30px;
       height: 30px;
-      color: var(--color-blue-500);
+      color: var(--theme-blue-600);
       margin-right: 10px;
     }
   }
 
   &:hover,
   &:active {
-    background-color: var(--color-blue-200);
+    background-color: var(--theme-bg-blue-200);
     border-radius: 14px;
   }
 }
 
 .link_li.admin {
   .link {
-    color: var(--color-rose-500);
+    color: var(--theme-text-rose-500);
 
     .icon {
-      color: var(--color-rose-500);
+      color: var(--theme-text-rose-500);
     }
   }
 
