--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--backcolor-primary);
+  background-color: var(--theme-bg-primary);
   height: 100vh;
 }
