--- a/src/pages/PaymentFailPage/PaymentFailPage.module.scss
+++ b/src/pages/PaymentFailPage/PaymentFailPage.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   h2 {
-    color: var(--color-rose-500);
+    color: var(--theme-text-rose-500);
     text-align: center;
   }
 }
@@ -29,7 +29,7 @@
 
     .error_text {
       font-weight: bold;
-      color: var(--color-rose-500);
+      color: var(--theme-text-rose-500);
     }
   }
 }
