--- a/src/pages/SignupPage/SignupPage.module.scss
+++ b/src/pages/SignupPage/SignupPage.module.scss
@@ -9,7 +9,7 @@
   min-width: 20rem;
   h2 {
     margin: 0;
-    color: var(--color-blue-500);
+    color: var(--theme-blue-600);
   }
 }
 
@@ -23,5 +23,5 @@
   height: 1.5rem;
   width: 1.5rem;
   text-decoration: none;
-  color: var(--color-blue-900);
+  color: var(--theme-text-blue-900);
 }
