--- a/src/styles/scss/_button-mixin.scss
+++ b/src/styles/scss/_button-mixin.scss
@@ -1,6 +1,6 @@
 @mixin custom-button(
   $color: var(--color-gray-100),
-  $backgroundColor: var(--color-blue-500),
+  $backgroundColor: var(--theme-blue-500),
   $activeBackgroundColor: var(--color-blue-600),
   $borderColor: null
 ) {
@@ -48,7 +48,7 @@
 }
 
 @mixin red-button {
-  @include custom-button($color: white, $backgroundColor: var(--color-rose-500), $activeBackgroundColor: var(--color-red-500));
+  @include custom-button($color: white, $backgroundColor: var(--color-rose-500), $activeBackgroundColor: var(--color-red-600));
 }
 
 @mixin white-button-legacy {
@@ -67,7 +67,7 @@
 
   &:hover {
     cursor: pointer;
-    color: var(--color-blue-900);
+    color: var(--color-blue-950);
     background-color: var(--color-gray-100);
   }
 
