--- a/src/ui/TextInput/TextInput.module.scss
+++ b/src/ui/TextInput/TextInput.module.scss
@@ -1,31 +1,33 @@
 .textbox {
   display: flex;
-  flex-direction: row-reverse; 
+  flex-direction: row-reverse;
   height: 35px;
 }
 
 .input {
   width: 100%;
-  padding-left: 6px; 
+  padding-left: 6px;
   border: none;
   outline: none;
-  background-color: var(--color-gray-100);
-  border: 1px solid var(--color-blue-400);
+  color: var(--theme-text-black);
+  background-color: var(--theme-bg-input);
+  border: 1px solid var(--theme-blue-400);
   border-left: none;
 }
 
 .input:focus {
-  border: 1px solid var(--color-blue-500);
+  border: 1px solid var(--theme-blue-600);
   border-left: none;
 }
 
-.input::placeholder{
+.input::placeholder {
   color: var(--color-gray-500);
 }
+
 .indicator {
   width: 4px;
   height: 100%;
-  background-color: var(--color-blue-500);
+  background-color: var(--theme-blue-500);
 }
 
 .input:focus ~ .indicator {
