회원가입 오류 수정

--- a/src/components/Signup/SignupForm/SignupForm.module.scss
+++ b/src/components/Signup/SignupForm/SignupForm.module.scss
@@ -18,7 +18,7 @@ $margin-bottom: 8px;
 }
 
 .signup {
-  @include custom-button;
+  @include blue-button;
   width: 100%;
   padding: 8px;
   text-align: center;
