--- a/src/components/Signup/SignupForm/SignupForm.module.scss
+++ b/src/components/Signup/SignupForm/SignupForm.module.scss
@@ -4,14 +4,13 @@ $margin-bottom: 8px;
 
 .title_container {
   position: relative;
-  padding: 20px 0;
+  padding: 0 0 20px 0;
 }
 
 .title {
   position: relative;
   text-align: center;
 }
-
 
 .input_style {
   margin-bottom: $margin-bottom;
