--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import './styles/scss/button-mixin';
 @import './styles/scss/mark-mixin';
 @import './styles/scss/methods';
+@import './styles/scss/ui';
