--- a/src/Layout/CenterLayout/CenterLayout.module.scss
+++ b/src/Layout/CenterLayout/CenterLayout.module.scss
@@ -1,7 +1,11 @@
-.body {
+.wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--theme-bg-primary);
   height: 100vh;
+}
+
+.card {
+  padding: 1.5rem;
 }
