디자인 관련 수정

--- a/src/components/FindPassword/FindPasswordForm/FindPasswordForm.module.scss
+++ b/src/components/FindPassword/FindPasswordForm/FindPasswordForm.module.scss
@@ -1,5 +1,11 @@
 @import '../../../index.scss';
 
+.label {
+  display: block;
+  color: var(--theme-text-black);
+  padding-bottom: 0.25rem;
+}
+
 .find_button {
   @include blue-button;
   width: 100%;
