--- a/src/Layout/CenterLayout/CenterLayout.module.scss
+++ b/src/Layout/CenterLayout/CenterLayout.module.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--theme-bg-primary);
   height: 100vh;
 }
 
 .card {
   padding: 1.5rem;
+  background-color: var(--theme-bg-card) !important;
 }
