--- a/src/components/ToBackXButton/ToBackXButton.module.scss
+++ b/src/components/ToBackXButton/ToBackXButton.module.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: -0.5rem;
   right: -0.5rem;
-  background-color: white;
+  background-color: transparent;
   border: none;
   z-index: 1;
 }
