디자인 세부 수정

--- a/src/components/ProductModal/components/CustomLi/CustomLi.module.scss
+++ b/src/components/ProductModal/components/CustomLi/CustomLi.module.scss
@@ -1,9 +1,12 @@
 .li {
   color: var(--theme-text-black);
+  display: flex;
+  align-items: center;
 }
 
 .title-span {
   min-width: 80px;
+  height: 1rem;
 }
 
 .colon-span {
