후불결제 기능 추가

--- a/src/Layout/RootLayout/Footer/RootFooter.module.scss
+++ b/src/Layout/RootLayout/Footer/RootFooter.module.scss
@@ -23,6 +23,10 @@
   font-size: var(--fs-xs);
   text-align: center;
   width: 100%;
+  line-height: 1.5;
+  strong {
+    font-weight: bold;
+  }
 }
 
 .corporate {
