--- a/src/components/CartView/CartViewTable/CartViewTable.module.scss
+++ b/src/components/CartView/CartViewTable/CartViewTable.module.scss
@@ -39,13 +39,13 @@
   }
 }
 
-.first-column-header {
+.first_column_header {
   span {
     position: absolute;
   }
 }
 
-.first-column {
+.first_column {
   text-align: center;
 }
 
