--- a/src/components/BuyArea/BuyArea.module.scss
+++ b/src/components/BuyArea/BuyArea.module.scss
@@ -1,6 +1,6 @@
 @import '../../index.scss';
 
-.buy-container {
+.buy_container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,27 +15,37 @@
   color: #fff;
 }
 
-.buy-wrapper {
+.buy_wrapper {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 60rem;
 }
 
-.buy-amount-wrapper {
+.buy_amount_wrapper {
   text-align: left;
 }
 
-.buy-amount-title {
+.buy_amount_title {
   font-size: var(--fs-base);
 }
 
-.buy-amount {
+.buy_amount {
   font-size: var(--fs-2xl);
   font-weight: bold;
 }
 
-.buy-amount-button {
-  @include white-button-legacy;
+.inner_right_wrapper {
+  display: flex;
   height: auto;
+}
+
+.check_bnpl {
+  color: white !important;
+  margin-right: 0.5rem;
+}
+
+.buy_amount_button {
+  @include white-button-legacy;
 }
