관리자 타이틀 안보이는 현상 수정

--- a/src/Layout/AdminLayout/Header/AdminHeader.module.scss
+++ b/src/Layout/AdminLayout/Header/AdminHeader.module.scss
@@ -1,5 +1,5 @@
 .container {
-  color: var(--color-white);
+  color: var(--theme-text-black);
   background-color: var(--theme-bg-white);
   width: 100%;
   height: var(--header-height);
