--- a/src/ui/NumericCombo/NumericCombo.module.scss
+++ b/src/ui/NumericCombo/NumericCombo.module.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 
 .combo-style {
-  width: 50px;
+  width: 3rem;
   border: 1px solid var(--theme-blue-400);
   border-radius: 4px;
   padding: 4px;
