--- a/src/ui/NumericCombo/NumericCombo.module.scss
+++ b/src/ui/NumericCombo/NumericCombo.module.scss
@@ -18,3 +18,11 @@
   margin-top: 2px;
   height: 28px;
 }
+
+.testinput {
+  &:focus,
+  &:active {
+    color: red;
+    background-color: blue;
+  }
+}
