--- a/src/components/CartViewItem/CartViewItem.module.scss
+++ b/src/components/CartViewItem/CartViewItem.module.scss
@@ -35,9 +35,24 @@
 
 .cart_item__body__left {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
+
+  .cart_item__body__price {
+    padding-bottom: 0.5rem;
+  }
 }
 
+@media (min-width: 400px) {
+  .cart_item__body__left {
+    align-items: center;
+    flex-direction: row;
+
+    .cart_item__body__price {
+      min-width: 4.8rem;
+    }
+  }
+}
 @media (min-width: 768px) {
   .cart_item__head,
   .cart_item__body {
